--- a/style.css
+++ b/style.css
@@ -11,10 +11,12 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  
   height: 100vh;
   width: 100vw;
   justify-content: center;
 }
+
 
 .judul {
   font-size: 2rem;
@@ -75,20 +77,6 @@ a {
   border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
-.konten-w1 {
-  width: 100%;
-  height: 700px;
-}
-
-.konten-w0 {
-  width: 100%;
-  height: 700px;
-  background-color: rgba(255, 255, 255, 0.096);
-}
-
-.K1-Foto {
-  width: 100px;
-}
 
 .footer {
   color: white;
@@ -98,4 +86,81 @@ a {
 .footer-item {
   margin-top: 40px;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+
+@media screen and (max-width: 1000px) {
+  .judul {
+      font-size: 2rem;
+      margin-top: 95%;
+      font-weight: 800;
+    }
+  
+    .subjudul {
+      font-size: 1.3rem;
+    }
+  
+    a {
+      text-decoration: none;
+    }
+  
+    .link {
+      font-family: Arial, Helvetica, sans-serif;
+      font-weight: bold;
+      color: rgba(152, 209, 255, 0.849);
+    }
+  
+    .navbar {
+      width: 100%;
+      height: 75px;
+      background-color: black;
+      display: flex;
+      justify-content: center;
+    }
+  
+    .nav-item {
+      margin: 20px;
+      margin-left: 45px;
+      font-size: 1.7rem;
+      color: white;
+      float: left;
+      display: block;
+      position: relative;
+      justify-content: center;
+      text-decoration: none;
+    }
+  
+    .gambar {
+      height: 30px;
+      margin: 19px;
+      display: flex;
+      float: right;
+    }
+  
+    .myButton {
+      display: inline-block;
+      cursor: pointer;
+      color: #f01010;
+      font-family: Arial;
+      font-size: 15px;
+      font-weight: bold;
+      padding: 9px 23px;
+      text-decoration: none;
+      background: rgba(255, 255, 255, 0.2);
+      box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+      backdrop-filter: blur(5px);
+      -webkit-backdrop-filter: blur(5px);
+      border: 1px solid rgba(255, 255, 255, 0.3);
+    }
+  
+  
+    .footer {
+      color: white;
+      height: 100px;
+    }
+  
+    .footer-item {
+      margin-top: 40px;
+      font-family: Arial, Helvetica, sans-serif;
+    }
 }
